# origami-musings

./: LICENSE  fivelinks.ipynb  fourlinks.ipynb  fourlinks.py  modular-joint-tuning.ipynb  pentagonal-gyrobicupola.ipynb  pyproject.toml
tonnetz/: mock_tonnetz.py  viz.py  viz_imports.py  viz_interactive.py  viz_rot_vedo.py  viz_side.py  viz_top.py
