[tool.poetry]
name = "origami-musings"
version = "0.1.0"
description = ""
authors = ["neerajaabhyankar <neeraja93.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
shapely = "^1.8.0"
scikit-learn = "^1.0.2"
networkx = "^2.6.3"
snappy = "^3.0.3"
open3d = "^0.14.1"
plotly = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
