[tool.poetry]
name = "origami-musings"
version = "0.1.0"
description = ""
authors = ["Neeraja Abhyankar <neeraja.abhyankar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
plotly = "^5.22.0"
vedo = "^2024.5.2"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
libmogra = "^0.1.1"
seaborn = "^0.13.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
